--- a/mvp_2/pubspec.yaml
+++ b/mvp_2/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
 
+  telephony: ^0.2.0
+
   pie_chart: 5.3.2
 
   flutter:
