--- a/mvp_2/pubspec.yaml
+++ b/mvp_2/pubspec.yaml
@@ -31,18 +31,25 @@ environment:
 dependencies:
 
   cloud_firestore: ^4.1.0
-  firebase_auth: ^4.1.4
-  telephony: ^0.2.0
+  firebase_auth: ^4.16.0
 
-  pie_chart: 5.3.2
+  telephony:
+    git:
+      url: https://github.com/definev/Telephony.git
+      ref: develop
+
+  pie_chart: ^5.4.0
 
   flutter:
     sdk: flutter
 
 
+
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  intl: 0.19.0
 
 dev_dependencies:
   flutter_test:
@@ -53,7 +60,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
